# antartar

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.win  README.md  conanfile.py  papers.md
ci/: .vsconfig
conan/: conan.conf  global.conf
conan/profiles/: devel
include/antartar/: app.h  app.hpp  log.hpp  vk.hpp  window.hpp
shaders/: CMakeLists.txt  fragment_shader.frag  shader.vert  vertex_shader.vert
src/: CMakeLists.txt  app.cpp  main.cpp  tutorial.cpp  window.cpp
src/include/antartar/: app.hpp  file.hpp  vk.hpp  window.hpp
